# HAL_Project

./: Cargo.toml  hal_project.elf  output.hex
src/: atmega328p.rs  atmega328p_i2c.rs  cortex_m.rs  cortex_m_i2c.rs  main.rs  simpleblink.rs  spi.h
